--- a/hugo.toml
+++ b/hugo.toml
@@ -1,73 +1,30 @@
 ######################## default configuration ####################
-# The base URL of your site (required). This will be prepended to all relative URLs.
 baseURL = "https://john1-design.github.io/hugoplate2/"
-# Title of your website (required).
 title = "Designproworks"
-# Your theme name
-# theme = "hugoplate"
-# Default time zone for time stamps; use any valid tz database name: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
 timeZone = "America/New_York"
-# post pagination
-paginate = 2 # see https://gohugo.io/extras/pagination/
-# post excerpt
-summaryLength = 10 # see https://gohugo.io/content-management/excerpts/
-# disable language
-disableLanguages = [
-] # example: ["fr"] for disable french language. see https://gohugo.io/content-management/multilingual/
-hasCJKLanguage = false #  If hasCJKLanguage true, auto-detect Chinese/Japanese/Korean Languages in the content. see: https://gohugo.io/getting-started/configuration/#hascjklanguage
-# default language
+paginate = 2
+summaryLength = 10
+disableLanguages = []
+hasCJKLanguage = false
 defaultContentLanguage = 'en'
-# defaultContentLanguageInSubdir need to be true if you want to use the language code as a subdirectory and language specific 404 page
 defaultContentLanguageInSubdir = false
 
 ########################### Services #############################
 [services]
 [services.googleAnalytics]
-ID = 'G-MEASUREMENT_ID' # see https://gohugo.io/templates/internal/#configure-google-analytics
+ID = 'G-MEASUREMENT_ID'
 
 [services.disqus]
-shortname = 'themefisher-template' # we use disqus to show comments in blog posts . To install disqus please follow this tutorial https://portfolio.peter-baumgartner.net/2017/09/10/how-to-install-disqus-on-hugo/
+shortname = 'themefisher-template'
 
 ########################## Permalinks ############################
 [permalinks.page]
-"pages" = "/:slugorfilename/"
-
-
-############################# Modules ############################
-[module]
-[[module.mounts]]
-source = "assets"
-target = "assets"
-
-[[module.mounts]]
-source = "hugo_stats.json"
-target = "assets/watching/hugo_stats.json"
+"pages" = "/:slug/"
 
 ############################# Build ##############################
 [build]
 noJSConfigInAssets = false
 useResourceCacheWhen = 'fallback'
-[build.buildStats]
-enable = true
-[[build.cachebusters]]
-source = 'assets/watching/hugo_stats\.json'
-target = 'style\.css'
-[[build.cachebusters]]
-source = '(postcss|tailwind)\.config\.js'
-target = 'css'
-[[build.cachebusters]]
-source = 'assets/.*\.(js|ts|jsx|tsx)'
-target = 'js'
-[[build.cachebusters]]
-source = 'assets/.*\.(css|scss|sass)'
-target = 'css'
-[[build.cachebusters]]
-source = 'data/.*\.(.*)$'
-target = 'css'
-[[build.cachebusters]]
-source = 'assets/.*\.(.*)$'
-target = '$1'
-
 
 ############################# Outputs ############################
 [outputs]
@@ -75,8 +32,6 @@ home = ["HTML", "RSS", "WebAppManifest", "SearchIndex"]
 
 ############################# Imaging ############################
 [imaging]
-# See https://github.com/disintegration/imaging
-# Default JPEG or WebP quality setting. Default is 75.
 quality = 80
 resampleFilter = "Lanczos"
 
@@ -90,26 +45,23 @@ maxAge = "720h"
 dir = ":resourceDir/_gen"
 maxAge = "720h"
 
-
 ############################ Markup ##############################
 [markup]
 [markup.goldmark.renderer]
 unsafe = true
 
 [markup.highlight]
-style = 'monokai' # see https://xyproto.github.io/splash/docs/all.html
+style = 'monokai'
 
 [markup.tableOfContents]
 startLevel = 2
 endLevel = 5
 ordered = true
 
-
 ########################### Media types ###########################
 [mediaTypes]
 [mediaTypes."application/manifest+json"]
 suffixes = ["webmanifest"]
-
 
 ########################### Output Format ##########################
 [outputFormats]
@@ -123,10 +75,7 @@ baseName = "searchindex"
 isPlainText = true
 notAlternative = true
 
-
 ############################# Plugins ##############################
-
-# CSS Plugins
 [[params.plugins.css]]
 link = "plugins/swiper/swiper-bundle.css"
 lazy = true
@@ -143,7 +92,6 @@ lazy = true
 link = "plugins/font-awesome/v6/icons.css"
 lazy = true
 
-# JS Plugins
 [[params.plugins.js]]
 link = "js/search.js"
 lazy = false
